# offline-trajectory-publisher

./: CMakeLists.txt  README.md  package.xml
config/: bringup.yaml  config_solo12.yaml  params.yaml
launch/: _offline_trajectory_publisher_state_machine_interface.launch.py  otp_smi_odri.launch.py
src/: offline_trajectory_publisher_state_machine_interface.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
trajectories/: us.txt  xs.txt
trajectories/double_jump/: us.txt  xs.txt
trajectories/half_backflip/: us.txt  xs.txt
trajectories/jump_31_5/: us.txt  xs.txt
trajectories/jump_aurelhugo_07m/: us.txt  xs.txt
trajectories/jump_def_conf_06m/: us.txt  xs.txt
